# taiji-pipeline.github.io

./: .gitmodules  .travis.yml  algorithm_PageRank.html  blog_1_ATAC.html  blog_2_ATAC+RNA.html  blog_3_scATAC.html  blog_4_scRNA.html  contact.html  index.html  install.html  site.hs  stack.yaml  taiji-web.cabal
.github/workflows/: ci.yml
compiler/: Main.hs
compiler/Taiji/: Web.hs
depoly/: build.sh
pages/: index.html  install.html  install.rst
static/css/: app.css
static/other/: taiji.html
templates/: default.html
web/pages/: blog.html  contact.md  index.html  install.md
web/pages/algorithm/: PageRank.md
web/pages/blog/: 1_ATAC.md  2_ATAC+RNA.md  3_scATAC.md  3_scRNA.md  4_scRNA.md  ATAC+RNA.md  ATAC-seq_walkthrough.md  ATAC.md  advance.md  demo.md
web/static/css/: _settings.scss  app.scss
web/static/other/: config.yml  input.tsv  taiji.html
web/templates/: default.html  footer.html  nav.html
