name:               taiji-web
version:            0.1.0
author:             Kai Zhang
maintainer:         kai@kzhang.org
copyright:          (c) 2018-2020 Kai Zhang
build-type:         Simple
cabal-version:      >= 1.10

executable taiji-web
  other-modules:    Taiji.Web
  main-is:          Main.hs
  hs-source-dirs:   compiler
  build-depends:    base == 4.*
                  , hakyll == 4.*
                  , hakyll-sass
                  , pandoc
                  , pandoc-types
                  , diagrams-pandoc
                  , text
                  , SVGFonts
  ghc-options:      -threaded
  default-language: Haskell2010
